# PhysicsFromScratch

./: .gitignore  CMakeLists.txt  README.md
Assets/Shaders/: Background.frag  Background.vert  Imgui.frag  Imgui.vert  RayDebug.frag  RayDebug.vert  Sphere.frag  Sphere.vert
Assets/Shaders/Spirv/: Background_frag.spv  Background_vert.spv  Imgui_frag.spv  Imgui_vert.spv  RayDebug_frag.spv  RayDebug_vert.spv  Sphere_frag.spv  Sphere_vert.spv
Helix/: CMakeLists.txt
Helix/Src/: Camera.cpp  Camera.hpp  Platform.cpp  Platform.hpp  Profiler.hpp  VendorLoader.cpp
Helix/Src/Math/: Math.hpp  Matrix.hpp  Quat.hpp  Transform.hpp  Vector.hpp
Helix/Src/Vulkan/: ImguiBackend.cpp  ImguiBackend.hpp  VulkanTypes.cpp  VulkanTypes.hpp  VulkanUtils.cpp  VulkanUtils.hpp
PhysicsFromScratch/: CMakeLists.txt
PhysicsFromScratch/Src/: SceneGraph.cpp  SceneGraph.hpp  main.cpp
PhysicsFromScratch/Src/Physics/: Body.cpp  Body.hpp  Bounds.cpp  Bounds.hpp  Broadphase.cpp  Broadphase.hpp  Contact.cpp  Contact.hpp  Intersections.cpp  Intersections.hpp
